--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -13,7 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Tiro+Bangla&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>MACCA JOYAS</title>
+    <meta name="author" content="Maria Macarena Menchini Borra"/>
+    <meta name="copyright" content="Maria Macarena Menchini Borra, Propietario del compyright"/>
+    <title>MACCA JOYAS promociones</title>
 </head>
 <body>
       
